--- a/3_nginx_install/playbooks/nginx.yml
+++ b/3_nginx_install/playbooks/nginx.yml
@@ -35,8 +35,8 @@
     - name: copy index.html
       template: src=templates/index.html dest=/usr/share/nginx/html/index.html mode=0644
 
-    - name: stop firewalld
-      shell: systemctl stop firewalld
+    - name: disable firewalld
+      shell: systemctl disable firewalld
 
   handlers:
     - name: restart nginx
