--- a/3_nginx_install/playbooks/templates/nginx.conf
+++ b/3_nginx_install/playbooks/templates/nginx.conf
@@ -5,7 +5,7 @@ server {
         root /usr/share/nginx/html;
         index index.html index.htm;
 
-        server_name localhost;
+        server_name {{ server_name }};
 
         location / {
                 try_files $uri $uri/ =404;
