--- a/3_nginx_install/playbooks/nginx.yml
+++ b/3_nginx_install/playbooks/nginx.yml
@@ -39,6 +39,9 @@
     - name: copy index.html
       template: src=templates/index.html dest=/usr/share/nginx/html/index.html mode=0644
 
+    - name: stop firewalld
+      shell: systemctl stop firewalld
+
     - name: disable firewalld
       shell: systemctl disable firewalld
 
