--- a/5_mysql_install/playbooks/ansible.cfg
+++ b/5_mysql_install/playbooks/ansible.cfg
@@ -3,3 +3,4 @@ hostfile = hosts
 remote_user = vagrant
 private_key_file = /Users/hamuhamu/.vagrant.d/insecure_private_key
 host_key_checking = False
+retry_files_enabled = False
